# xeus-pywrap

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  kernel.json  post.js.in  xeus-pywrapConfig.cmake.in
.github/workflows/: deploy-github-page.yml  main.yml
docs/: Doxyfile  environment.yml
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
examples/xeus_basic/kernelspec/xeus_basic/: kernel.json  kernel.json.in
examples/xeus_basic/module/xeus_basic/: __init__.py
examples/xeus_basic/module/xeus_basic/PyBasic/: basicparser.py  interpreter.py  lexer.py  program.py
examples/xeus_basic/module/xeus_basic/PyBasic/examples/: pi_spigot.bas
examples/xeus_brainfuck/kernelspec/xeus_brainfuck/: kernel.json  kernel.json.in
examples/xeus_brainfuck/module/xeus_brainfuck/: __init__.py
examples/xeus_brainfuck/module/xeus_brainfuck/brainfuck/: LICENSE  brainfuck.py
examples/xeus_echo/kernelspec/xeus_echo/: kernel.json  kernel.json.in
examples/xeus_echo/module/xeus_echo/: __init__.py
examples/xeus_javascript/: __init__.py  interpreter.py  kernel.json
examples/xeus_javascript/serve_dir/: interpreter.py
examples/xeus_python/: __init__.py  async_exec.py  kernel.json  sb.py
examples/xeus_shakespearelang/: __init__.py  kernel.json
examples/xeus_shakespearelang/kernelspec/xeus_shakespearelang/: kernel.json  kernel.json.in
examples/xeus_shakespearelang/module/xeus_shakespearelang/: __init__.py
examples/xeus_shakespearelang/module/xeus_shakespearelang/shakespearelang/: _input.py  _output.py
include/xeus-pywrap/: xaserver.hpp  xaserver_zmq.hpp  xeus_pywrap_config.hpp  xinterpreter.hpp
module/xpywrap/: __init__.py  constants.py  interpreter_base.py  io.py  response.py
notebooks/: xeus-basic.ipynb  xeus-brainfuck.ipynb  xeus-pywrap.ipynb  xeus-shakespearelang.ipynb
notebooks/licenses/: README.md
share/jupyter/kernels/xpywrap/: kernel.json.in
src/: export_pywrap.cpp  main.cpp  main_emscripten_kernel.cpp  xaserver.cpp  xaserver_zmq.cpp  xasync_runner.cpp  xasync_runner.hpp  xinterpreter.cpp
test/: test_xeus_echo.py  test_xeus_shakespearelang.py  test_xpywrap_kernel.py
wasm_patches/: post.js
